iptables.conf
*nat
:PREROUTING ACCEPT [2:124]
:INPUT ACCEPT [2:124]
:OUTPUT ACCEPT [3:284]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 10.20.[ID].0/24 -j MASQUERADE
COMMIT
*filter
:INPUT ACCEPT [69:4812]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [52:5464]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.[ID].0/24 -j ACCEPT
-A INPUT -s 10.20.[ID].0/24 -j ACCEPT
-A INPUT -p udp --dport 1194 -j ACCEPT
-A INPUT -j DROP
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.20.[ID].0/24 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
COMMIT
